...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="@dimen/width_card">

            <TextView
                    android:id="@+id/tv_update_title"
                    android:text="@string/last_update"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_title_text"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
...
